@@ -1,3 +1,7 @@
+  04 Apr 2013; Ewoud kohl van Wijngaarden <ekohl@gentoo.org>
+  kitchen-1.1.1.ebuild:
+  Update kitchen to distutils-r1
+
   03 Apr 2013; Alon Bar-Lev <alonbl@gentoo.org> kitchen-1.1.1.ebuild:
   no need for phases
 
